# hello_rust

./: Cargo.toml
docs/notes/: root.md
src/: am.rs  choose.rs  fmtn.rs  infection.rs  main.rs  year.rs  yi.rs
