[package]
name = "hello_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aaa"
path = "src/main.rs"

[[bin]]
name = "am"
path = "src/am.rs"

[[bin]]
name = "yi"
path = "src/yi.rs"

[[bin]]
name = "fmtn"
path = "src/fmtn.rs"

[[bin]]
name = "choose"
path = "src/choose.rs"

[[bin]]
name = "year"
path = "src/year.rs"


[[bin]]
name = "infection"
path = "src/infection.rs"

[dependencies]
rand = "0.8.5"
chrono = "0.4.23"